--- a/src/app/features/post-login/issue/issue-detail/issue-detail.component.html
+++ b/src/app/features/post-login/issue/issue-detail/issue-detail.component.html
@@ -3,15 +3,23 @@
   <h5 class="mat-headline-5 fw-medium">Chi tiết kế hoạch kiểm tra</h5>
   <div class="row issue-detail" *ngIf="issue">
     <p-dialog
+      #pdfDialog
       header="Xem tài liệu"
-      [(visible)]="pdfLoaded"
+      [(visible)]="pdfPreviewVisibility"
       [style]="{ width: '90vw', height: '100vh' }"
       [draggable]="false"
       [resizable]="false"
+      [maximizable]="true"
+      [modal]="true"
+      (onHide)="onHideFilePreviewEvent()"
     >
-      <div *ngIf="pdfLoaded">
-        <iframe [src]="safePdfUrl" width="100%" height="680px"></iframe>
+      <div *ngIf="!pdfLoaded; else pdfIsLoaded" class="spinner">
+        <div class="spinner-border text-center" role="status"></div>
+        <p>Đang tải...</p>
       </div>
+      <ng-template #pdfIsLoaded>
+        <iframe [src]="safePdfUrl" width="100%" height="99%"></iframe>
+      </ng-template>
     </p-dialog>
     <p-dialog
       header="Tài liệu không có hiệu lực"
