--- a/src/app/features/post-login/issue/issue-detail/issue-detail.component.scss
+++ b/src/app/features/post-login/issue/issue-detail/issue-detail.component.scss
@@ -93,3 +93,19 @@
 .font-size-18 {
     font-size: 18px;
 }
+.spinner {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    .spinner-border {
+        width: 5rem;
+        height: 5rem;
+        color: $primary;
+    }
+    p {
+        color: $primary;
+    }
+}
