--- a/src/app/features/post-login/issue/update-issue/update-issue.component.scss
+++ b/src/app/features/post-login/issue/update-issue/update-issue.component.scss
@@ -228,3 +228,19 @@ textarea {
         }
     }
 }
+.spinner {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    .spinner-border {
+        width: 5rem;
+        height: 5rem;
+        color: $primary;
+    }
+    p {
+        color: $primary;
+    }
+}
