--- a/src/app/features/post-login/inspection-plan/inspection-plan-list/inspection-plan-list.component.html
+++ b/src/app/features/post-login/inspection-plan/inspection-plan-list/inspection-plan-list.component.html
@@ -5,10 +5,8 @@
 <h5 class="mat-headline-5 fw-medium">Danh sách kế hoạch thanh tra</h5>
 <p-toast key="error" position="top-right"></p-toast>
 <div class="table-container">
-  <div
-    class="my-4 row advance-search container-fluid d-flex flex-row justify-content-between"
-  >
-    <div class="form-group col-md-4" *ngIf="!advanceSearch">
+  <div class="my-4 px-3 row advance-search d-flex flex-row justify-content-between">
+    <div class="form-group col-md-6" *ngIf="!advanceSearch">
       <input
         type="text"
         name="globalSearch"
