--- a/src/app/features/post-login/assignment/assignment-tree-list/assignment-tree-list.component.html
+++ b/src/app/features/post-login/assignment/assignment-tree-list/assignment-tree-list.component.html
@@ -6,9 +6,9 @@
 <h5 class="mat-headline-5 fw-medium">Tra cứu tài liệu các trường</h5>
 <div class="table-container">
   <div
-    class="my-4 row advance-search container-fluid d-flex flex-row justify-content-between"
+    class="my-4 row advance-search px-3 d-flex flex-row justify-content-between"
   >
-    <div class="form-group col-md-4" *ngIf="!advanceSearch">
+    <div class="form-group col-md-6" *ngIf="!advanceSearch">
       <input
         type="text"
         name="globalSearch"
@@ -17,7 +17,7 @@
         [(ngModel)]="assignmentName"
         (keyup)="loadDocuments()"
         pInputText
-        placeholder="&#xF002; Tra cứu nhanh"
+        placeholder="&#xF002; Tra cứu nhanh theo tên công việc"
       />
     </div>
     <div *ngIf="advanceSearch" class="col-md-10">
