--- a/src/app/features/post-login/guidance-document/guidance-document-list/guidance-document-list.component.html
+++ b/src/app/features/post-login/guidance-document/guidance-document-list/guidance-document-list.component.html
@@ -5,9 +5,9 @@
 <h5 class="mat-headline-5 fw-medium">Tra cứu văn bản bổ sung</h5>
 <div class="table-container">
   <div
-    class="my-4 row advance-search container-fluid d-flex flex-row justify-content-between"
+    class="my-4 row advance-search px-3 d-flex flex-row justify-content-between"
   >
-    <div class="form-group col-md-4" *ngIf="!advanceSearch">
+    <div class="form-group col-md-6" *ngIf="!advanceSearch">
       <input
         type="text"
         name="globalSearch"
