--- a/src/app/features/post-login/school-initiation-plan/school-initiation-plan-list/school-initiation-plan-list.component.html
+++ b/src/app/features/post-login/school-initiation-plan/school-initiation-plan-list/school-initiation-plan-list.component.html
@@ -6,9 +6,9 @@
 <h5 class="mat-headline-5 fw-medium">Tra cứu kế hoạch thực hiện</h5>
 <div class="table-container">
   <div
-    class="my-4 row advance-search container-fluid d-flex flex-row justify-content-between"
+    class="my-4 px-3 row advance-search d-flex flex-row justify-content-between"
   >
-    <div class="form-group col-md-4" *ngIf="!advanceSearch">
+    <div class="form-group col-md-6" *ngIf="!advanceSearch">
       <input
         type="text"
         name="globalSearch"
