--- a/src/app/features/post-login/inspection-plan/inspection-plan-detail/inspection-plan-detail.component.html
+++ b/src/app/features/post-login/inspection-plan/inspection-plan-detail/inspection-plan-detail.component.html
@@ -4,6 +4,7 @@
   [style]="{ width: '100vw', height: '100vh' }"
   [draggable]="false"
   [resizable]="false"
+  [modal]="true"
 >
   <div *ngIf="!pdfLoaded; else pdfIsLoaded" class="spinner">
     <div class="spinner-border text-center" role="status"></div>
@@ -84,7 +85,7 @@
             </p-tag>
           </div>
         </div>
-        <h6 class="mat-headline-6 fw-medium">Tài liệu công văn</h6>
+        <h6 class="mat-headline-6 mb-1 fw-medium">Tài liệu công văn</h6>
         <div class="file-item py-1 d-flex"
              (click)="openNewTab(inspectionPlanDetail.inspectionPlan.documents[0]?.documentLink)">
           <div class="file-item-icon d-flex justify-content-center align-items-center">
@@ -93,21 +94,21 @@
           <div class="row col-md-10 d-flex align-items-end mb-3">
             <div class="col-md-8">
               <p class="mb-0">
-                <span>Tên tài liệu: </span>
-                <span class="fw-bold">{{
+                <span class="fw-medium">{{
                   inspectionPlanDetail.inspectionPlan.documents[0]?.documentName
                   }}</span>
+                <span class="fw-medium">.{{inspectionPlanDetail.inspectionPlan.documents[0]?.fileExtension}}</span>
               </p>
               <p class="mb-0">
                 <span>Loại tài liệu: </span>
-                <span class="fw-bold">{{
+                <span class="fw-medium">{{
                   inspectionPlanDetail.inspectionPlan.documents[0]?.documentType
                     .documentTypeName
                   }}</span>
               </p>
               <p class="mb-0">
                 <span>Mã tài liệu: </span>
-                <span class="fw-bold">{{
+                <span class="fw-medium">{{
                   inspectionPlanDetail.inspectionPlan.documents[0]?.documentCode
                   }}</span>
               </p>
@@ -115,14 +116,14 @@
             <div class="col-md-4 text-end">
               <p class="mb-0">
                 <span>Kích thước: </span>
-                <span class="fw-bold">{{
+                <span class="fw-medium">{{
                   inspectionPlanDetail.inspectionPlan.documents[0]?.size
                     | fileSizePipe : "MB"
                   }}</span>
               </p>
               <p class="mb-0">
                 <span>Ngày tạo: </span>
-                <span class="fw-bold">{{
+                <span class="fw-medium">{{
                   inspectionPlanDetail.inspectionPlan.documents[0]?.uploadedDate
                     | date : "MM/dd/yyyy"
                   }}</span>
